--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -12,6 +12,7 @@
     <thead>
         <tr>
             <th>Movie</th>
+            <th>Genre</th>
         </tr>
     </thead>
 
@@ -19,7 +20,8 @@
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Name</td>
+                <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null) </td>
+                <td>@movie.Genre.Name</td>
             </tr>
         }
     </tbody>
