--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -20,13 +20,14 @@
 }
 else
 {
-    <table class="table table-bordered table-hover">
+    <table id="customers" class="table table-bordered table-hover">
 
         <thead>
             <tr>
                 <th>Customer</th>
                 <th>Membership Type</th>
                 <th>Discount Rate</th>
+                <th>Remove Customer</th>
             </tr>
         </thead>
 
@@ -37,9 +38,39 @@ else
                     <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
                     <td>@customer.MembershipType.Name</td>
                     <td>@customer.MembershipType.DiscountRate%</td>
+                    <td>
+                        <button data-customer-id="@customer.Id" class="btn btn-default js-delete">Remove
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            </button>
+                    </td>
                 </tr>
             }
 
         </tbody>
     </table>
+}
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#customers").on("click", ".js-delete", function () {
+                var button = $(this);
+
+                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/customers/" + button.attr("data-customer-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+
 }
