--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -13,48 +13,49 @@
 
 <h2>Customers</h2>
 
-@if (!Model.Any())
+<table id="customers" class="table table-bordered table-hover">
 
-{
-    <p>We don't have any customers yet.</p>
-}
-else
-{
-    <table id="customers" class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Customer</th>
+            <th>Membership Type</th>
+            <th>Remove</th>
+        </tr>
+    </thead>
 
-        <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Membership Type</th>
-                <th>Discount Rate</th>
-                <th>Remove Customer</th>
-            </tr>
-        </thead>
+    <tbody></tbody>
+</table>
 
-        <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.Name</td>
-                    <td>@customer.MembershipType.DiscountRate%</td>
-                    <td>
-                        <button data-customer-id="@customer.Id" class="btn btn-default js-delete">Remove
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                            </button>
-                    </td>
-                </tr>
-            }
-
-        </tbody>
-    </table>
-}
 
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable();
+            $("#customers").DataTable({
+                ajax: {
+                    url: "/api/customers",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "name"
+
+                    },
+                  
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn btn-default js- delete' data-customer-id=" + data + ">Remove</button>";
+                        }
+                    }
+                ]
+            });
 
             $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
