--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -31,7 +31,7 @@
 {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable({
+           var table = $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
                     dataSrc: ""
@@ -44,14 +44,14 @@
                         }
                     },
                     {
-                        data: "name"
+                        data: "membershipType.name"
 
                     },
                   
                     {
                         data: "id",
                         render: function (data) {
-                            return "<button class='btn btn-default js- delete' data-customer-id=" + data + ">Remove</button>";
+                            return "<button class='btn btn-default js-delete' data-customer-id=" + data + ">Remove</button>";
                         }
                     }
                 ]
@@ -66,7 +66,8 @@
                             url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
+                                table.row(button.parents("tr")).remove().draw();
+                                
 
                             }
                         });
